--- a/RunConfig.properties
+++ b/RunConfig.properties
@@ -21,14 +21,14 @@ GWCC_AGILE_URL=http://cc-agile-test.myqbe.com/CC/ClaimCenter.do
 ## RunSource		: ExecutionSheet, Tag
 ##                	  RunManager.xls for all modes & other options only for BDD mode.
 ## Tag				: Will be used when user wants to run single scenario or single Feature file
-## HeadlessMode		: Will be used when user wants to run the scenarios without browser UI(Headless)	
+## HeadlessMode		: Will be used when user wants to run the scenarios without browser UI(Headless)
+##AutomationType 	: Need to select UI to run UI automation, Desktop to run Desktop automation	
 
 ##--------------------------------------------------------------------------------------------------------------------
 
 RunMode=BDD
-AutomationType=UI
+AutomationType=Desktop
 RunSource=ExecutionSheet
-Tags=Smoke
 HeadlessMode=false
 
 
