--- a/RunConfig.properties
+++ b/RunConfig.properties
@@ -27,7 +27,7 @@ GWCC_AGILE_URL=http://cc-agile-test.myqbe.com/CC/ClaimCenter.do
 ##--------------------------------------------------------------------------------------------------------------------
 
 RunMode=BDD
-AutomationType=Desktop
+AutomationType=UI
 RunSource=ExecutionSheet
 HeadlessMode=false
 
