--- a/RunConfig.properties
+++ b/RunConfig.properties
@@ -10,9 +10,9 @@ Project=Guideware Automation
 ##--------------------------------------------------------------------------------------------------------------------
 ProjectName=Regression
 Environment=TEST
-GWCC_TEST_URL=http://cc-test.myqbe.com/CC/ClaimCenter.do
-GWCC_MODL_URL=https://cc-modl.myqbe.com/CC/ClaimCenter.do
-GWCC_AGILE_URL=http://cc-agile-test.myqbe.com/CC/ClaimCenter.do
+GWCC_TEST_URL=https://opensource-demo.orangehrmlive.com/
+GWCC_MODL_URL=https://opensource-demo.orangehrmlive.com/
+GWCC_AGILE_URL=https://opensource-demo.orangehrmlive.com/
 
 
 
