--- a/pom.xml
+++ b/pom.xml
@@ -13,18 +13,18 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<java.home>C:/Program Files/Java/jdk1.8.0_212/bin</java.home> 
-			<testng.filename>${env.testng}</testng.filename>
+			
 			
 		<!-- <testng.environ>TEST</testng.environ> 
-		<testng.slave>slave1</testng.slave>  -->
+		<testng.slave>slave1</testng.slave> 
+		<testng.filename>testngUI.xml</testng.filename> -->
 		
-		
-		<!-- <testng.ExeID>NATSM-47179</testng.ExeID>  -->	 	
-
+		<!-- <testng.ExeID>NATSM-47179</testng.ExeID>  -->	 
 		
 			
 		 <testng.environ>${env.envir}</testng.environ>
 		<testng.slave>${env.slave}</testng.slave>
+		<testng.filename>${env.testng}</testng.filename>
 		
 		
 		<!-- <testng.ExeID>${env.testEID}</testng.ExeID>  -->
