--- a/RunConfig.properties
+++ b/RunConfig.properties
@@ -10,9 +10,9 @@ Project=Guideware Automation
 ##--------------------------------------------------------------------------------------------------------------------
 ProjectName=Regression
 Environment=TEST
-GWCC_TEST_URL=https://opensource-demo.orangehrmlive.com/
-GWCC_MODL_URL=https://opensource-demo.orangehrmlive.com/
-GWCC_AGILE_URL=https://opensource-demo.orangehrmlive.com/
+GWCC_TEST_URL=https://opensource-demo.orangehrmlive.com
+GWCC_MODL_URL=https://opensource-demo.orangehrmlive.com
+GWCC_AGILE_URL=https://opensource-demo.orangehrmlive.com
 
 
 
